# biobrary

./: CircleNode.py  EBLOSUM62.py  EDNAFULL.py  LICENSE  Makefile  README.md  __init__.py  amino_acids_mw.py  bio_codon.py  biocodon.py  bioparse.py  bioparser.py  fparse.py  pyproject.toml  score_matrix.py  setup.cfg  setup.py
.github/workflows/: publish-on-pypi.yml  python-publish.yml
biobrary/: CircleNode.py  __init__.py  amino_acids_mw.py  base_complement.py  biocodon.py  bioparser.py  misc.py  seq.py
biobrary/bioparse/: __init__.py  blast_parse.py  fasta.py  fasta_parse.py  gbk_parse.py  gff_parse.py  gtf.py  gtf_parse.py
biobrary/data/: AA_name_map  molecular_weight.py
docs/source/: conf.py  index.rst
docs/source/reference/: bioparse.rst  index.rst
test/: generate_test_tree.py  test.fasta  test_tree.nwk  tree69.nwk
