[metadata]
name = biobrary
version = 0.0.4
author = Benjamin Fang
author_email = benjaminfang.ol@outlook.com
description = A library for biological computing works
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benjaminfang/biobrary

[options]
package_dir = biobrary
python_requires = >= 3.7
