[metadata]
name = biobrary
version = 0.0.6
author = Benjamin Fang
author_email = benjaminfang.ol@outlook.com
description = A library for biological computing works
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benjaminfang/biobrary
license = MIT

[options]
packages = biobrary
python_requires = >= 3.7
install_requires = ete3
    numpy
